Update state file write path

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
         "--sheet-key",
         "16PyxTb34EXWTwgGASX43uayVsQCsUJH1QZhFV-IjW-k",
         "--worksheet-name",
-        "Splitwise Expenses",
+        "Splitwise 2025",
         "--overwrite"
       ]
     },
@@ -38,7 +38,7 @@
         "--sheet-key",
         "16PyxTb34EXWTwgGASX43uayVsQCsUJH1QZhFV-IjW-k",
         "--worksheet-name",
-        "'Splitwise Expenses'"
+        "'Splitwise 2025'"
       ]
     },
     {
