--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,13 +4,13 @@
     {
       "label": "Run splitwise_export (example)",
       "type": "shell",
-      "command": "${config:python.pythonPath} ${workspaceFolder}/src/splitwise_export.py --start-date 2025-01-01 --end-date 2025-12-31 --sheet-name \"Splitwise Export\"",
+      "command": "${config:python.pythonPath} ${workspaceFolder}/src/export/splitwise_export.py --start-date 2025-01-01 --end-date 2025-12-31 --sheet-name \"Splitwise Export\"",
       "problemMatcher": []
     },
     {
       "label": "Run pipeline (dry-run)",
       "type": "shell",
-      "command": "${config:python.pythonPath} ${workspaceFolder}/src/pipeline.py --statement ${workspaceFolder}/data/raw/sample_statement.csv --dry-run",
+      "command": "${config:python.pythonPath} ${workspaceFolder}/src/import_statement/pipeline.py --statement ${workspaceFolder}/data/raw/sample_statement.csv --dry-run",
       "problemMatcher": []
     }
   ]
