--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 venv/
 __pycache__/
-config/credentials.env
+config/.env
+config/gsheets_authentication.json
 *.pyc
 .ipynb_checkpoints/
 .idea/
+data/
