--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,7 +42,8 @@
         "--start-date",
         "2026-01-01",
         "--end-date",
-        "2026-01-31"
+        "2026-01-31",
+        "--sync-only"
       ]
     },
     {
@@ -65,9 +66,11 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${file}",
-      "console": "integratedTerminal"
-      ,
-      "envFile": "${workspaceFolder}/config/.env"
+      "console": "integratedTerminal",
+      "envFile": "${workspaceFolder}/config/.env",
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}"
+      },
     }
   ]
 }
