Add sync to launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,9 +40,27 @@
         "--year",
         "2026",
         "--start-date",
-        "2026-01-01",
+        "2026-02-01",
         "--end-date",
-        "2026-01-31",
+        "2026-02-28",
+        "--statement",
+        "data/raw/amex2026.csv",
+        "--append-only"
+      ]
+    },
+    {
+      "name": "Monthly Export Sync Only",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/export/monthly_export_pipeline.py",
+      "console": "integratedTerminal",
+      "envFile": "${workspaceFolder}/config/.env",
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}"
+      },
+      "args": [
+        "--year",
+        "2026",
         "--sync-only"
       ]
     },
@@ -54,9 +72,9 @@
         "console": "integratedTerminal",
         "envFile": "${workspaceFolder}/config/.env",
         "args": [
-            "--statement",
-            "data/raw/sample_statement.csv",
-            "--dry-run",
+          "--statement",
+          "data/raw/sample_statement.csv",
+          "--dry-run",
           "--worksheet-name",
           "${env:DRY_RUN_WORKSHEET_NAME}"
         ]
