Add method to get expense by ID (#4)
* Update gitignore

* Update pandas version

* Get last 7 days personal expenses

* Refactor client code

* Refactor filtering logic

* Add python dateutil requirement

* Add example config

* Add some AI generated files

* Statement parsing and create splitwise transactions

* Write dry run to sheets

* Export from splitwise to sheets

* Add formatting to columns

* Add copilot context

* Apply style guide

* Arrange constants

* Update constants, requirements

* Fix errors

* Reuse splitwise client code

* Move static function to utils

* Remove amount filtering logic

* Fix overwrite logic and amount formatting

* Cache static data and split transaction details

* Classify expense types

* Refactor util functions to parse date safely

* Add matching on transaction reference id

* Initial categorization logic

* Write category to sheet

* Fix config discovery bug

* Filter out splitwise settlements

* Update categorization filters

* Remove log of sample filtered out rows

* Filter out payments

* Run black formatting

* Add vscode files

* Updated launch targets

* Update run config

* Fix payment filtering logic

* Remove limit from splitwise fetch

* Update state file write path

* Remove sheet key concept

* Rename env file

* Update env vars

* Update launch type

* Add script to update self expense split

* Update run configs

* Fix filtering logic

* Correct self split logic

* Add back id based sheet access

* Write categories only when requested

* Always resize sheet to avoid duplicates

* Refactor with constants

* Fix sheet formatting

* Use constants for export columns

* Apply black formatting

* Filter out credits

* Enhanced expense categorization

* Add categories based on 2025 statement

* Remove unused regex config

* Read env vars in pipeline

* Refactor sheets operations

* Improve merchant name extraction

* Fix pipeline

* Add rules to filter numbers from description

* Add a statement review process

* U

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,44 @@
       }
     },
     {
+      "name": "Monthly Export Pipeline",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/export/monthly_export_pipeline.py",
+      "console": "integratedTerminal",
+      "envFile": "${workspaceFolder}/config/.env",
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}"
+      },
+      "args": [
+        "--year",
+        "2026",
+        "--start-date",
+        "2026-02-01",
+        "--end-date",
+        "2026-02-28",
+        "--statement",
+        "data/raw/amex2026.csv",
+        "--append-only"
+      ]
+    },
+    {
+      "name": "Monthly Export Sync Only",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/export/monthly_export_pipeline.py",
+      "console": "integratedTerminal",
+      "envFile": "${workspaceFolder}/config/.env",
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}"
+      },
+      "args": [
+        "--year",
+        "2026",
+        "--sync-only"
+      ]
+    },
+    {
         "name": "Dry Run",
         "type": "debugpy",
         "request": "launch",
@@ -34,9 +72,9 @@
         "console": "integratedTerminal",
         "envFile": "${workspaceFolder}/config/.env",
         "args": [
-            "--statement",
-            "data/raw/sample_statement.csv",
-            "--dry-run",
+          "--statement",
+          "data/raw/sample_statement.csv",
+          "--dry-run",
           "--worksheet-name",
           "${env:DRY_RUN_WORKSHEET_NAME}"
         ]
@@ -46,9 +84,11 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${file}",
-      "console": "integratedTerminal"
-      ,
-      "envFile": "${workspaceFolder}/config/.env"
+      "console": "integratedTerminal",
+      "envFile": "${workspaceFolder}/config/.env",
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}"
+      },
     }
   ]
 }
